Make voting items more compact; fix text overflow issue

--- a/src/views/Event/EventCompo/CompoVote/vote.scss
+++ b/src/views/Event/EventCompo/CompoVote/vote.scss
@@ -11,11 +11,15 @@ $attention-color: mix($brand-primary, $app-bg, 50%);
     padding: 0 !important;
 
     .item-number {
-        padding: ($spacer / 2) $spacer;
+        padding: ($spacer / 4) $spacer;
 
         .item-number-score {
             font-size: 60%;
         }
+    }
+    .item-title {
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .item-handle {
         // "grab" might be more fitting, but it doesn't work in Chrome
@@ -33,7 +37,7 @@ $attention-color: mix($brand-primary, $app-bg, 50%);
         display: flex;
         // This should flex as much as possible to fill the row
         flex: 1 1 auto;
-        padding: ($spacer / 2);
+        padding: ($spacer / 4);
         overflow: hidden;
 
         // This contains item-title and item-actions;
